Added console output in UI added feature to run JMC profiler for custom time through input in UI added dynmic loading elements added refreshing functionality when job becomes successful or fails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2-console
-
-spring.profiles.active=simulate
+# specify the profile for the executor to operate with
+spring.profiles.active=prod
