--- a/src/main/resources/inventory.ini
+++ b/src/main/resources/inventory.ini
@@ -1,2 +1,3 @@
 [servers]
-db1 ansible_host=172.16.47.216 ansible_user=nexthink ansible_ssh_private_key_file=~/.ssh/ansible
+db1 ansible_host=172.16.47.216 ansible_user=nexthink ansible_ssh_private_key_file=~/.ssh/ansible ansible_python_interpreter=/usr/bin/python3.11
+db2 ansible_host=172.16.46.122 ansible_user=nexthink ansible_ssh_private_key_file=~/.ssh/ansible ansible_python_interpreter=/usr/bin/python3.11
