--- a/src/main/resources/playbooks/jmc.yml
+++ b/src/main/resources/playbooks/jmc.yml
@@ -1,5 +1,5 @@
 ---
-- name: Run jcmd as nxportal user, capture PID and start JFR recording (60 seconds)
+- name: Run jcmd as nxportal user, capture PID and start JFR recording ("{{ JMCRunningTime }}" seconds)
   hosts: all
   become: true
   collections:
@@ -8,21 +8,31 @@
     - name: Run jcmd with shell module
       shell: "sudo -u nxportal jcmd"
       register: jcmd_output
-    - name: Parse PID from jcmd output
+    - name: Get process ID ending with SMALL
+      shell: sudo -u nxportal jcmd | grep 'SMALL$' | awk '{print $1}'
+      register: process_id_output
+      changed_when: false
+    - name: Extract process ID
       set_fact:
-        process_id: "{{ jcmd_output.stdout.split()[0] }}"  # Assuming PID is 1st element
-    - name: Print captured process ID
-      debug:
-        msg: "Captured process ID: {{ process_id }}"
-    - name: Start JFR recording with 60 seconds duration
-      shell: "sudo -u nxportal jcmd {{ process_id }} JFR.start duration=60s filename=/var/nexthink/portal/logsjmc/myrecording.jfr"
+        process_id: "{{ process_id_output.stdout.split('\\n')[0] }}"
+    - name: Start JFR recording with seconds duration
+      shell: "sudo -u nxportal jcmd {{ process_id }} JFR.start duration={{ JMCRunningTime }}s filename=/home/nxportal/myrecording.jfr"
       when: process_id is defined
-    - name: Wait for 60 seconds
+    - name: Wait for "{{ JMCRunningTime }}" seconds
       wait_for:
-          timeout: 60
+          timeout: "{{ JMCRunningTime }}"
+    - name: Create destination directory (if required)
+      become: false
+      file:
+        path: "{{ PlaybookPath }}/Result/{{ Job_id }}/{{ ansible_host }}/"  # Replace with your desired local path
+        state: directory
+        mode: 0755
+      delegate_to: localhost
     - name: Specifying a path directly
       ansible.builtin.fetch:
-        src: /var/nexthink/portal/logsjmc/myrecording.jfr
-        dest: /Users/hridyanshu.ghura/Desktop/JMC_result/{{ ansible_host }}_jmc.jfr
+        src: "/home/nxportal/myrecording.jfr"
+        dest: "{{ PlaybookPath }}/Result/{{ Job_id }}/{{ ansible_host }}/Result_jmc.jfr"
         flat: yes
+
+
 
